src/test/deca/syntax/valid/created/test_objet_chain.deca
// Description:
//    Programme testantle chainage des méthodes
//
// Resultats:
//      
class A {
    int x;
    A getMe() {
        return this;
    }
}

{
    A a = new A();

    a.getMe().getMe().x = 3;
    

    new A().x = 5;
}