src/test/deca/syntax/invalid/created/test_invalid_parenthese.deca
class A{
    float x;
    int getX(){
        return x
    }
}

{
    A a = new getX;
    A.x;
    A.getX();
}